rust/transpiler/snapshots/control_flow@try_except@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/control_flow/try_except.hyper
---
injections:
  - end: 87
    prefix: "from hyper import escape, replace_markers\n\ndef TryExcept(data: dict, risky_func: object) -> str:\n    _parts = []\n    try:\n        _parts.append(f\"\"\"<span>‹ESCAPE:{"
    start: 72
    suffix: ""
    type: python
  - end: 204
    prefix: "}›</span>\"\"\")\n    except KeyError::\n        _parts.append(\"\"\"<span>Key not found</span>\"\"\")\n    try:\n        _parts.append(f\"\"\"<span>‹ESCAPE:{"
    start: 192
    suffix: ""
    type: python
  - end: 262
    prefix: "}›</span>\"\"\")\n    except ValueError as e::\n        _parts.append(f\"\"\"<span>Value error: ‹ESCAPE:{"
    start: 261
    suffix: ""
    type: python
  - end: 318
    prefix: "}›</span>\"\"\")\n    except TypeError as e::\n        _parts.append(f\"\"\"<span>Type error: ‹ESCAPE:{"
    start: 317
    suffix: ""
    type: python
  - end: 377
    prefix: "}›</span>\"\"\")\n    except Exception as e::\n        _parts.append(f\"\"\"<span>Unknown error: ‹ESCAPE:{"
    start: 376
    suffix: ""
    type: python
  - end: 511
    prefix: "}›</span>\"\"\")\n    try:\n        result = data['key']\n    except KeyError::\n        _parts.append(\"\"\"<span>Missing</span>\"\"\")\n    else:\n        _parts.append(f\"\"\"<span>Found: ‹ESCAPE:{"
    start: 505
    suffix: ""
    type: python
  - end: 575
    prefix: "}›</span>\"\"\")\n    try:\n        _parts.append(f\"\"\"<span>‹ESCAPE:{"
    start: 562
    suffix: ""
    type: python
  - end: 851
    prefix: "}›</span>\"\"\")\n    except:\n        _parts.append(\"\"\"<span>Error</span>\"\"\")\n    finally:\n        _parts.append(\"\"\"<span>Cleanup complete</span>\"\"\")\n    try:\n        value = data['key']\n    except KeyError::\n        _parts.append(\"\"\"<span>Not found</span>\"\"\")\n        value = 'default'\n    else:\n        _parts.append(\"\"\"<span>Success</span>\"\"\")\n    finally:\n        _parts.append(f\"\"\"<span>Done: ‹ESCAPE:{"
    start: 846
    suffix: "}›</span>\"\"\")\n    return replace_markers(\"\".join(_parts))\n"
    type: python
ranges:
  - compiled_end: 67
    compiled_start: 57
    range_type: Python
    source_end: 10
    source_start: 0
  - compiled_end: 87
    compiled_start: 69
    range_type: Python
    source_end: 29
    source_start: 11
  - compiled_end: 178
    compiled_start: 163
    range_type: Python
    source_end: 87
    source_start: 72
  - compiled_end: 332
    compiled_start: 320
    range_type: Python
    source_end: 204
    source_start: 192
  - compiled_end: 430
    compiled_start: 429
    range_type: Python
    source_end: 262
    source_start: 261
  - compiled_end: 526
    compiled_start: 525
    range_type: Python
    source_end: 318
    source_start: 317
  - compiled_end: 625
    compiled_start: 624
    range_type: Python
    source_end: 377
    source_start: 376
  - compiled_end: 813
    compiled_start: 807
    range_type: Python
    source_end: 511
    source_start: 505
  - compiled_end: 890
    compiled_start: 877
    range_type: Python
    source_end: 575
    source_start: 562
  - compiled_end: 1298
    compiled_start: 1293
    range_type: Python
    source_end: 851
    source_start: 846
