rust/transpiler/snapshots/control_flow@while_loop@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/control_flow/while_loop.hyper
---
from hyper import escape, replace_markers

def WhileLoop(count: int) -> str:
    _parts = []
    _parts.append("<div>")
    while count > 0:
        _parts.append(f"""<p>Count: ‹ESCAPE:{count}›</p>""")
    _parts.append("</div>")
    return replace_markers("".join(_parts))
